# pepng

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  shell.nix
cmake/: .gitignore  BuildGLEW.cmake  BuildGLFW.cmake  BuildGLM.cmake
drivers/: CMakeLists.txt  lab01.cpp  main.cpp
include/: pepng.h
include/pepng/: component.h  object.h
shaders/: frag.glsl  fragment.glsl  lineFragment.glsl  lineVertex.glsl  triangular.glsl  vertex.glsl  wireframe.glsl
shaders/object/: fragment.glsl  vertex.glsl
shaders/shadow/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/texture/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  camera.cpp  camera.hpp  component.cpp  component.hpp  controller.cpp  controller.hpp  main.cpp  model.cpp  model.hpp  object.cpp  object.hpp  objects.cpp  objects.hpp  shader.cpp  shader.hpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp
src/component/: camera.cpp  camera.hpp  component.cpp  component.hpp  components.hpp  dynamic_texture.cpp  dynamic_texture.hpp  fps.cpp  fps.hpp  light.cpp  light.hpp  movement.cpp  movement.hpp  pointlight.cpp  pointlight.hpp  renderer.cpp  renderer.hpp  selector.cpp  selector.hpp  spotlight.cpp  spotlight.hpp  transform.cpp  transform.hpp  transformer.cpp  transformer.hpp  with_components.cpp  with_components.hpp
src/component/extra/: dynamic_texture.cpp  dynamic_texture.hpp  fps.cpp  fps.hpp  selector.cpp  selector.hpp  transformer.cpp  transformer.hpp
src/components/: component.cpp  component.hpp  model.cpp  model.hpp
src/core/: pepng.cpp  pepng.hpp
src/gl/: buffer.cpp  buffer.hpp  gl.hpp  load.hpp  material.cpp  material.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/io/: io.cpp  io.hpp
src/object/: axes.cpp  axes.hpp  camera.cpp  camera.hpp  grid.cpp  grid.hpp  object.cpp  object.hpp  objects.hpp  texture.cpp  texture.hpp
src/object/extra/: axes.cpp  axes.hpp  grid.cpp  grid.hpp  texture.cpp  texture.hpp
src/objects/: camera.hpp  object.hpp
src/ui/: ui.hpp  with_imgui.hpp
src/util/: cloneable.hpp  delayed_init.hpp  load.cpp  load.hpp  utils.cpp  utils.hpp
